objects/ssot__AgentWork__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcceptDateTime__c</fullName>
        <label>Accept Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveTimeSeconds__c</fullName>
        <label>Active Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AftConvWorkActualTime__c</fullName>
        <label>After Conversation Work Actual Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AftConvWorkExtensionCount__c</fullName>
        <label>After Conversation Work Extension Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AgentWorkRoutingType__c</fullName>
        <label>Agent Work Routing Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AgentWorkStatus__c</fullName>
        <label>Agent Work Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AgentWork_BotlId_map_Bot_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentWork_BotlId_map_Bot_Id_N_1</label>
        <referenceTo>ssot__Bot__dlm</referenceTo>
        <relationshipLabel>AgentWork_BotlId_map_Bot_Id_N_1</relationshipLabel>
        <relationshipName>AgentWork_BotlId_map_Bot_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__AgentWork_RelatedToId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentWork_RelatedToId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>AgentWork_RelatedToId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>AgentWork_RelatedToId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__AgentWork_UserId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentWork_UserId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>AgentWork_UserId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>AgentWork_UserId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__BotlId__c</fullName>
        <label>Bot</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CloseDateTime__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HandleTimeSeconds__c</fullName>
        <label>Handle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Agent Work Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredUserId__c</fullName>
        <label>Preferred User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToId__c</fullName>
        <label>Related To</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestDateTime__c</fullName>
        <label>Request DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SpeedToAnswerSeconds__c</fullName>
        <label>Speed To Answer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UserGroupId__c</fullName>
        <label>User Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UserId__c</fullName>
        <label>User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761228055_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentWork_UserGroupId_map_UserGroup__rel</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>AgentWork_UserGroupId_map_UserGroup__rel</relationshipLabel>
        <relationshipName>rel_1697761228055_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>